@@ -1404,8 +1404,7 @@ check_required_feature(Globals, Context, Feature, !Specs) :-
             Pieces = [words("Error: this module must be compiled in a grade"),
                 words("that supports trailing.")],
             VerbosePieces = [words("Grades that support trailing contain"),
-                words("the grade modifiers"), quote("tr"),
-                words("or"), quote("trseg"), suffix("."), nl],
+                words("the grade modifier"), quote("tr"), suffix("."), nl],
             Msg = simple_msg(Context,
                 [always(Pieces), verbose_only(verbose_once, VerbosePieces)]),
             Spec = error_spec($pred, severity_error, phase_parse_tree_to_hlds,
