@@ -2,11 +2,10 @@ TRAIL_INSTALL_PREFIX=.
 
 MCFLAGS = \
 	--use-trail			\
-	--trail-segments		\
 	--use-grade-subdirs		\
 	--libgrades-exclude java	\
 	--libgrades-exclude csharp	\
-	--libgrades-include trseg	\
+	--libgrades-include tr		\
 	--install-prefix $(TRAIL_INSTALL_PREFIX)
 
 MCFLAGS-mercury_trail=--no-warn-nothing-exported --no-warn-interface-imports 
